--- a/ua/index.html
+++ b/ua/index.html
@@ -10,7 +10,7 @@
 <body>
     <section id="language" class="flex">
         <div>
-            <a href="/ru/">По-русски</a>
+            <a href="ru/">По-русски</a>
             &nbsp;&nbsp;&nbsp;&nbsp;
             <a href="../">English</a>
         </div>
