--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
 <body>
     <section id="language" class="flex">
         <div>
-            <a href="/ru/">По-русски</a>
+            <a href="ru/">По-русски</a>
             &nbsp;&nbsp;&nbsp;&nbsp;
-            <a href="/uk/">Українською</a>
+            <a href="uk/">Українською</a>
         </div>
     </section>
 
