--- a/ru/index.html
+++ b/ru/index.html
@@ -12,7 +12,7 @@
         <div>
             <a href="../">English</a>
             &nbsp;&nbsp;&nbsp;&nbsp;
-            <a href="uk/">Українською</a>
+            <a href="../uk/">Українською</a>
         </div>
     </section>
 
