--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>АЛІСА ЛАРЧЕНКОУЧ</title>
+    <title>Alisa LarchenCoach</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Source+Sans+3:ital,wght@0,200..900;1,200..900&display=swap" rel="stylesheet">  
@@ -24,7 +24,7 @@
     <div class="flex">
         <div class="column_text">
             <h1>Alisa LarchenCoach</h1>              
-            <p class="maintext">helps people overcome insecurity and anxiety by inspiring them to adopt and implement resonating self-support practices</p>
+            <p class="maintext">Helps people overcome insecurity and anxiety by inspiring them to adopt and implement resonating self-support practices</p>
             <div class="maintext_comment">
                 <p>She specializes in working with divorced parents, providing art therapy & coaching for them personally and their children individually or in mini-groups.</p>                
                 <p>Alisa also works with sensitive and creative teenagers facing depression, drugs, violence, and other life challenges.</p>
