description update step 2.html

--- a/index.html
+++ b/index.html
@@ -26,17 +26,13 @@
             <h1>Alisa LarchenCoach</h1>              
             <p class="maintext">Provides consultations, guidance & support to people, inspiring them to adopt & implement resonating innovative approaches to self-management.</p>
             <div class="maintext_comment">
-                <p>Alisa invites people to exolore and discover, then connect with their core values. Sense personal rhythm. Practice wisdom in daily life. She guides those who are stuck in old self-perceptions, showing the path through resistance of body & mind to divinity & trust. She believes life can be filled with less struggle and more beauty, bliss and joy, achieved through a balance between deeper sense, honesty, self-awareness, creativity unitind ancient traditions with innovativation.
+                <p>Alisa invites people to explore and discover, connect & integrate their core values by learning about different ways of perceiving information. Sense personal rhythm. Practice wisdom in daily life. She guides those who are stagnant and stuck in outdated self-perceptions, showing the path out - through stagnation & resistance of body-mind-system to divinity & self-trust of the Spirit inside. Life can be filled with much more ease & less struggle. More beauty, bliss and joy, achieved through a balance of sense, honesty, self-awareness, creativity, clarity, courage, emotional intelligence, curiosity, patience, energy management, motion, care, playfulness, intuition, inspiration, generosity, respect, integrity & kindness uniting ancient traditions with innovation.
 
 Alisa offers trainings and consultations to instill hope and help people cope with obstacles and circumstances. Her motivation and guidance inspire self-trust, self-care, and the adoption of practices that work.
 
-She provides soft skills training and consultation to individuals and groups, focusing on empathy, care, and personal development. Teens, sensitive mothers, families, and corporate teams have benefited from her sessions, gaining creativity, empathy, and resilience.
+She provides soft skills training and consultation to individuals and groups. Teens, sensitive mothers, families, and corporate teams have benefited from her sessions, gaining creativity, integrating empathy and resilience.
 
-With expertise in education, psychotherapy, coaching, and media production, Alisa crafts workshops addressing awkwardness, insecurity, and anxiety. She specializes in supporting divorced parents and their children, helping them transition and adapt.
-
-In case you wish to support Alisa's art and charity projects, feel free to participate as a partner..</p>                
-                <p>Alisa also works with sensitive and creative teenagers facing depression, drugs, violence, and other life challenges.</p>
-                <p>Special attention pays to single mothers with so-called "difficult teenagers," helping both sides reconcile with internal contradictions, feel their own path, find and believe in the strength to follow it.</p>
+With expertise in education, psychotherapy, coaching, and media production, Alisa crafts workshops addressing soft skills training awkwardness, insecurity and anxiety, confidence, sensuality and sensibility. She specializes in supporting parents and their children, helping them transition and adapt to the ever-changing environment.</p>
             </div>
         </div>
         <div class="column_photo">
