--- a/index.html
+++ b/index.html
@@ -26,7 +26,13 @@
             <h1>Alisa LarchenCoach</h1>              
             <p class="maintext">Provides consultations, guidance & support to people, inspiring them to adopt & implement resonating innovative approaches to self-management.</p>
             <div class="maintext_comment">
-                <p>Alisa invites people to explore and discover, connect & integrate their core values by learning about different ways of perceiving information. Sense personal rhythm. Practice wisdom in daily life. She guides those who are stagnant and stuck in outdated self-perceptions, showing the path out - through stagnation & resistance of body-mind-system to divinity & self-trust of the Spirit inside. Life can be filled with much more ease & less struggle. More beauty, bliss and joy, achieved through a balance of sense, honesty, self-awareness, creativity, clarity, courage, emotional intelligence, curiosity, patience, energy management, motion, care, playfulness, intuition, inspiration, generosity, respect, integrity & kindness uniting ancient traditions with innovation.
+                <p>Alisa invites people to explore and discover, connect & integrate their core values by learning about different ways of perceiving information. Sense personal rhythm. Practice wisdom in daily life.
+                She guides those who are stagnant and stuck in outdated self-perceptions, showing the path out - through stagnation & resistance of body-mind-system to divinity and self-trust to the Honest Spirit inside.
+                Life can be filled with much more ease & less struggle.
+                More beauty, bliss and joy, achieved through a balance of self-awareness, creativity, clarity, courage, emotional intelligence, curiosity, patience, energy management,
+                motion, care, playfulness, intuition, inspiration, generosity, respect, integrity & kindness
+                united by time.
+                Ancient traditions / innovation. What do you choose?
 
 Alisa offers trainings and consultations to instill hope and help people cope with obstacles and circumstances. Her motivation and guidance inspire self-trust, self-care, and the adoption of practices that work.
 
