--- a/index.html
+++ b/index.html
@@ -27,18 +27,20 @@
             <p class="maintext">Provides consultations, guidance & support to people, inspiring them to adopt & implement resonating innovative approaches to self-management.</p>
             <div class="maintext_comment">
                 <p>Alisa invites people to explore and discover, connect & integrate their core values by learning about different ways of perceiving information. Sense personal rhythm. Practice wisdom in daily life.
-                She guides those who are stagnant and stuck in outdated self-perceptions, showing the path out - through stagnation & resistance of body-mind-system to divinity and self-trust to the Honest Spirit inside.
-                Life can be filled with much more ease & less struggle.
-                More beauty, bliss and joy, achieved through a balance of self-awareness, creativity, clarity, courage, emotional intelligence, curiosity, patience, energy management,
-                motion, care, playfulness, intuition, inspiration, generosity, respect, integrity & kindness
+                She guides those who are stagnant and stuck in outdated self-perceptions, inspiring action & showing the path out - through stagnation & resistance by effort-managemtn within the Body-Mind-System to divinity.
+                Life can be filled with much more ease & less struggle if the HonestSpirit inside is truly trusted.
+                More beauty, bliss and joy, achieved through a balance of self-awareness, creativity, clarity, courage,
+                emotional intelligence, curiosity, patience, energy management,
+                motion, care, playfulness, intuition, inspiration,
+                generosity, respect, integrity & kindness
                 united by time.
-                Ancient traditions / innovation. What do you choose?
+                Ancient traditions / innovation. What do you choose?</p>
 
-Alisa offers trainings and consultations to instill hope and help people cope with obstacles and circumstances. Her motivation and guidance inspire self-trust, self-care, and the adoption of practices that work.
+</h1>She provides soft-skills training and consultations to individuals and groups.</h1>
+            <div class="maintext_comment">
+                 <p>Teens, sensitive mothers, families, and corporate teams have benefited from her sessions, gaining clear visions, implementing empathy as a strategic tool for success, focus and resilience. <p>
 
-She provides soft skills training and consultation to individuals and groups. Teens, sensitive mothers, families, and corporate teams have benefited from her sessions, gaining creativity, integrating empathy and resilience.
-
-With expertise in education, psychotherapy, coaching, and media production, Alisa crafts workshops addressing soft skills training awkwardness, insecurity and anxiety, confidence, sensuality and sensibility. She specializes in supporting parents and their children, helping them transition and adapt to the ever-changing environment.</p>
+<h1>With expertise in education, psychotherapy, coaching, and media production, Alisa crafts individual workshops addressing soft-skills for life and business. She specializes in supporting parents and their children/teens in transition and adapting to the ever-changing environments and circumstances.
             </div>
         </div>
         <div class="column_photo">
