--- a/index.html
+++ b/index.html
@@ -24,10 +24,10 @@
     <div class="flex">
         <div class="column_text">
             <h1>Alisa LarchenCoach</h1>              
-            <p class="maintext">Provides consultations, guidance & support to people, inspiring them to adopt & implement resonating innovative approaches to self-management.</p>
+            <p class="maintext">Provides guidance & support, inspiring adoption & implementation of innovative approaches to self-management.</p>
             <div class="maintext_comment">
-                <p>Alisa invites people to explore and discover, connect & integrate their core values by learning about different ways of perceiving information. Sense personal rhythm. Practice wisdom in daily life.
-                She guides those who are stagnant and stuck in outdated self-perceptions, inspiring action & showing the path out - through stagnation & resistance by effort-managemtn within the Body-Mind-System to divinity.
+                <p>Alisa invites people to explore, connect & integrate their core values. Sense personal rhythm. Practice wisdom in daily life.</p>
+                <p>She guides those who are stagnant and stuck in outdated self-perceptions, inspiring action & showing the path out - through stagnation & resistance by effort-managemtn within the Body-Mind-System to divinity.</p>
                 Life can be filled with much more ease & less struggle if the HonestSpirit inside is truly trusted.
                 More beauty, bliss and joy, achieved through a balance of self-awareness, creativity, clarity, courage,
                 emotional intelligence, curiosity, patience, energy management,
