--- a/index.html
+++ b/index.html
@@ -27,14 +27,14 @@
             <p class="maintext">Provides guidance & support, inspiring adoption & implementation of innovative approaches to self-management.</p>
             <div class="maintext_comment">
                 <p>Alisa invites people to explore, connect & integrate their core values. Sense personal rhythm. Practice wisdom in daily life.</p>
-</h1>She guides those who are stagnant and stuck in outdated self-perceptions, inspiring action & showing the path out - through feeling stuck & resisting change to divinity by delicate effort-management.</h1>
+  <p class="maintext"></h1>She guides those who are stagnant and stuck in outdated self-perceptions, inspiring action & showing the path out - through feeling stuck & resisting change to divinity & delicate effort-management.</h1></p>
 </h1>Life can be filled with much more ease & less struggle if the Honest Spirit inside is truly trusted.</h1>
 </h1>More beauty, bliss and joy, achieved through a balance of self-awareness, creativity, clarity, courage,</h1>
 </h1>emotional intelligence, curiosity, patience, energy management,</h1>
 </h1>motion, care, playfulness, intuition, inspiration,</h1>
 </h1>generosity, respect, integrity & kindness</h1>
 </h1>united by time.</h1>
-</h1>Ancient traditions / innovation. What do you choose?</h1></p>
+  <p class="maintext"></h1>Ancient traditions / innovation. What do you choose?</h1></p>
 
 </h1>She provides soft-skills training and consultations to individuals and groups.</h1>
             <div class="maintext_comment">
