--- a/index.html
+++ b/index.html
@@ -24,23 +24,21 @@
     <div class="flex">
         <div class="column_text">
             <h1>Alisa LarchenCoach</h1>              
-            <p class="maintext">Provides guidance & support, inspiring adoption & implementation of innovative approaches to self-management.</p>
+            <p class="maintext">Provides guidance & support, inspires action and raises awareness.</p>
             <div class="maintext_comment">
-                <p>Alisa invites people to explore, connect & integrate their core values. Sense personal rhythm. Practice wisdom in daily life.</p>
-  <p class="maintext"></h1>She guides those who are stagnant and stuck in outdated self-perceptions, inspiring action & showing the path out - through feeling stuck & resisting change to divinity & delicate effort-management.</h1></p>
-</h1>Life can be filled with much more ease & less struggle if the Honest Spirit inside is truly trusted.</h1>
-</h1>More beauty, bliss and joy, achieved through a balance of self-awareness, creativity, clarity, courage,</h1>
-</h1>emotional intelligence, curiosity, patience, energy management,</h1>
-</h1>motion, care, playfulness, intuition, inspiration,</h1>
-</h1>generosity, respect, integrity & kindness</h1>
-</h1>united by time.</h1>
+                <p>I invite you to explore, connect & integrate your core values in your daily life.</p>
+  <p class="maintext">I consult those who are feeling stagnant and need to shake the old dust off. Those who are stuck in outdated self-perceptions.</p>
+            <div class="maintext_comment">
+ </h1>Together we can discover Your True Path. Stop resisting change! Train new skills. Join a meeting for divine & delicate effort-management coaching.</h1>
+            </h1>Life can be filled with much more ease & less struggle if the Honest Spirit inside is truly trusted.</h1>
+<p class="maintext"></h1>What if there is more beauty, bliss and joy, achieved through a balance of creativity, clarity & courage?</h1><div class="maintext_comment">
+</h1>Practice emotional intelligence, curiosity, patience, care, playfulness, generosity, respect & kindness.</h1>
   <p class="maintext"></h1>Ancient traditions / innovation. What do you choose?</h1></p>
-
-</h1>She provides soft-skills training and consultations to individuals and groups.</h1>
             <div class="maintext_comment">
-                 <p>Teens, sensitive mothers, families, and corporate teams have benefited from her sessions, gaining clear visions, implementing empathy as a strategic tool for success, focus and resilience. <p>
+                 <p>Families and corporate teams, teens & sensitive mothers have benefited from my sessions, gained clear visions, implemented empathy as a strategic tool for success.<p>
 
-<h1>With expertise in education, psychotherapy, coaching, and media production, Alisa crafts individual workshops addressing soft-skills for life and business. She specializes in supporting parents and their children/teens in transition and adapting to the ever-changing environments and circumstances.
+<h1>With expertise in education, psychotherapy, coaching, and media production, Alisa crafts individual workshops addressing soft-skills for life and business.
+    She specializes in supporting parents and their children/teens in transition and adapting to the ever-changing environments and circumstances.
             </div>
         </div>
         <div class="column_photo">
