--- a/index.html
+++ b/index.html
@@ -23,16 +23,14 @@
     <section id="about" class="bg">
     <div class="flex">
         <div class="column_text">
-            <h1>Alisa LarchenCoach</h1>              
-            <p class="maintext">Provides guidance & support, inspires action and raises awareness.</p>
+<h1>Alisa LarchenCoach</h1>              
+<p class="maintext">Provides guidance & support, inspires action and raises awareness.</p>
             <div class="maintext_comment">
                 <p>I invite you to explore, connect & integrate your core values in your daily life.</p>
   <p class="maintext">I consult those who are feeling stagnant and need to shake the old dust off. Those who are stuck in outdated self-perceptions.</p>
             <div class="maintext_comment">
  </h1>Together we can discover Your True Path. Stop resisting change! Train new skills. Join a meeting for divine & delicate effort-management coaching.</h1>
-            </h1>Life can be filled with much more ease & less struggle if the Honest Spirit inside is truly trusted.</h1>
-<p class="maintext"></h1>What if there is more beauty, bliss and joy, achieved through a balance of creativity, clarity & courage?</h1><div class="maintext_comment">
-</h1>Practice emotional intelligence, curiosity, patience, care, playfulness, generosity, respect & kindness.</h1>
+<p class="maintext"></h1>What if there is more beauty, bliss and joy, achieved through a balance of creativity & courage? Practice emotional intelligence, curiosity, patience, care, playfulness, generosity, respect & kindness.</h1><div class="maintext_comment">
   <p class="maintext"></h1>Ancient traditions / innovation. What do you choose?</h1></p>
             <div class="maintext_comment">
                  <p>Families and corporate teams, teens & sensitive mothers have benefited from my sessions, gained clear visions, implemented empathy as a strategic tool for success.<p>
