--- a/index.html
+++ b/index.html
@@ -34,8 +34,8 @@
             <div class="maintext_comment">
                  <p>Families and corporate teams, teens & sensitive mothers have benefited from my sessions, gained clear visions, implemented empathy as a strategic tool for success.<p>
 
-<h1>With expertise in education, psychotherapy, coaching, and media production, Alisa crafts individual workshops addressing soft-skills for life and business.
-    She specializes in supporting parents and their children/teens in transition and adapting to the ever-changing environments and circumstances.
+<h1>With expertise in education, psychotherapy, coaching, and media production, Alisa crafts individual workshops.
+    addressing soft-skills for life, school and business.</h1> 
             </div>
         </div>
         <div class="column_photo">
