--- a/index.html
+++ b/index.html
@@ -30,12 +30,11 @@
   <p class="maintext">I consult those who are feeling stagnant and need to shake the old dust off. Those who are stuck in outdated self-perceptions.</p>
             <div class="maintext_comment">
 <p class="maintext"></h1>What if there is more beauty, bliss and joy, achieved through a balance of creativity & courage? Practice emotional intelligence, curiosity, patience, care, playfulness, generosity, respect & kindness.</h1><div class="maintext_comment">
-  <p class="maintext"></h1>Ancient traditions / innovation. What do you choose?</h1></p>
+  <p class="maintext"></h1></h1></p>
             <div class="maintext_comment">
                  <p>Families and corporate teams, teens & sensitive mothers have benefited from my sessions, gained clear visions, implemented empathy as a strategic tool for success.<p>
 
-<h1>With expertise in education, psychotherapy, coaching, and media production, Alisa crafts individual workshops.
-    addressing soft-skills for life, school and business.</h1> 
+<h1>With expertise in education, psychotherapy, coaching, and media production, I craft individual workshops addressing soft-skills for life, school and business.</h1> 
             </div>
         </div>
         <div class="column_photo">
