--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                 <p>I consult those who are feeling stagnant and need to shake the old dust off.</p>
                 <p>Those who are stuck in outdated self-perceptions.</p>
             <div class="maintext_comment">
-<p class="maintext">What if there is more beauty, bliss and joy, achieved through a balance of creativity & courage?
+<p class="maintext">What if there is more beauty, bliss and joy, achieved through creativity & courage?
                  <p>Join a meeting & come practice emotional intelligence, curiosity, patience, care, respect & kindness.</p><div class="maintext_comment">
   <p class="maintext"></h1></h1></p>
             <div class="maintext_comment">
