--- a/index.html
+++ b/index.html
@@ -36,8 +36,7 @@
             <div class="maintext_comment">
                  <p>Families and corporate teams, teens & sensitive mothers have benefited from my sessions, gained clear visions, implemented empathy as a strategic tool for success.</p>
 
-<h1>With expertise in education, psychotherapy, coaching, and media production,
-    <p>I craft individual workshops addressing soft-skills for life, school and business.</p></h1> 
+<p class="maintext">With expertise in education, psychotherapy, coaching, and media production, I craft individual workshops addressing soft-skills for life, school and business.</p><div class="maintext_comment">
             </div>
         </div>
         <div class="column_photo">
