--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                  <p>Join a meeting & come practice emotional intelligence, curiosity, patience, care, respect & kindness.</p><div class="maintext_comment">
   <p class="maintext"></h1></h1></p>
             <div class="maintext_comment">
-                 <p>Families and corporate teams, teens & sensitive mothers have benefited from my sessions, gained clear visions, implemented empathy as a strategic tool for success.</p>
+                 <p>Corporate leaders, families, sensitive teens & mothers have benefitted from my sessions, gained clear visions, implemented empathy as a strategic tool for success.</p>
 
 <p class="maintext">With expertise in education, psychotherapy, coaching, and media production, I craft individual workshops addressing soft-skills for life, school and business.</p><div class="maintext_comment">
             </div>
