--- a/index.html
+++ b/index.html
@@ -24,11 +24,11 @@
     <div class="flex">
         <div class="column_text">
 <h1>Alisa LarchenCoach</h1>              
-<p class="maintext">Provides guidance & support, inspires action and raises awareness.</p>
+<p class="maintext">Provides guidance for families, individuals & corporate leaders.</p>
             <div class="maintext_comment">
                 <p>I invite you to explore, connect & integrate your core values in your daily life.</p>
                 <p>I consult those who are feeling stagnant and need to shake the old dust off.</p>
-                <p>Those who are stuck in outdated self-perceptions.</p>
+                <p>Those who are stuck in outdated self-perceptions. Let me inspire action, help you calm down, train and shape your reality better.</p>
             <div class="maintext_comment">
 <p class="maintext">What if there is more beauty, bliss and joy, achieved through creativity & courage?
                  <p>Join a meeting & come practice emotional intelligence, curiosity, patience, care, respect & kindness.</p><div class="maintext_comment">
