--- a/index.html
+++ b/index.html
@@ -23,18 +23,18 @@
     <section id="about" class="bg">
     <div class="flex">
         <div class="column_text">
-<h1>Alisa LarchenCoach</h1>              
-<p class="maintext">Provides guidance for families, individuals & corporate leaders.</p>
+<h1>Alisa LarchenCoach provides guidance & support for individuals, families & corporate leaders.</h1>              
+<p class="maintext"></p>
             <div class="maintext_comment">
-                <p>I invite you to explore, connect & integrate your core values in your daily life.</p>
-                <p>I consult those who are feeling stagnant and need to shake the old dust off.</p>
-                <p>Those who are stuck in outdated self-perceptions. Let me inspire action, help you calm down, train and shape your reality better.</p>
+                <p>I invite you to explore & integrate your core values in daily life.</p>
+                <p>Feeling stagnant and need to shake the old dust off?</p>
+                <p>Call me if you are stuck in outdated self-perceptions. Let me inspire action, help you calm down, train and shape your reality better.</p>
             <div class="maintext_comment">
 <p class="maintext">What if there is more beauty, bliss and joy, achieved through creativity & courage?
                  <p>Join a meeting & come practice emotional intelligence, curiosity, patience, care, respect & kindness.</p><div class="maintext_comment">
   <p class="maintext"></h1></h1></p>
             <div class="maintext_comment">
-                 <p>Corporate leaders, families, sensitive teens & mothers have benefitted from my sessions, gained clear visions, implemented empathy as a strategic tool for success.</p>
+                 <p>Corporate leaders, families, sensitive teens & mothers have benefitted from my sessions, gained clear visions & implemented empathy as a strategic tool for personal and team success.</p>
 
 <p class="maintext">With expertise in education, psychotherapy, coaching, and media production, I craft individual workshops addressing soft-skills for life, school and business.</p><div class="maintext_comment">
             </div>
