--- a/index.html
+++ b/index.html
@@ -53,8 +53,9 @@
             <div class="price">depends on the request and sustainability of the project. It usually varies for different categories of people: families, solo mothers, corporate culture managers. <br/>The client chooses the amount that is affortable yet motivating.
     
                 <ul>
-                    <li><b>3 sessions</b> to actualize the issue: 108EUR</li>
-                    <li><b>3 week intense course</b>begin the transformation: 315EUR</li>
+                    <li><b>3 sessions</b> to actualize the issue: 108EUR /3 sessions = 3 hours convenient time</li>
+                    <li><b>3 weeks</b> to begin the transformation: 1008EUR /21 sessions 1 hour daily</li>
+                    <li><b>3 months</b> to integrate the issue: to be discussed</li>
                 </ul>
     
             </div>
