--- a/index.html
+++ b/index.html
@@ -28,15 +28,19 @@
             <div class="maintext_comment">
                 <p>I invite you to explore & integrate your core values in daily life.</p>
                 <p>Feeling stagnant and need to shake the old dust off?</p>
-                <p>Call me if you are stuck in outdated self-perceptions. Let me inspire action, help you calm down, train and shape your reality better.</p>
+                <p>Call me if you are stuck in outdated self-perceptions.</div>p>
+                    <p>Let me inspire action, help you calm down, train and shape your reality better.</p>
             <div class="maintext_comment">
 <p class="maintext">What if there is more beauty, bliss and joy, achieved through creativity & courage?
-                 <p>Join a meeting & come practice emotional intelligence, curiosity, patience, care, respect & kindness.</p><div class="maintext_comment">
+                 <p>Join a meeting & come practice emotional intelligence,</div>p>
+                     <p>curiosity, patience, care, respect & kindness.</p><div class="maintext_comment">
   <p class="maintext"></h1></h1></p>
             <div class="maintext_comment">
-                 <p>Corporate leaders, families, sensitive teens & mothers have benefitted from my sessions, gained clear visions & implemented empathy as a strategic tool for personal and team success.</p>
+                 <p>Corporate leaders, families, sensitive teens & mothers have benefitted from ssesions with me,
+                     gained clear visions & implemented empathy as a strategic tool for personal and team success.</p>
 
-<p class="maintext">With expertise in education, psychotherapy, coaching, and media production, I craft individual workshops addressing soft-skills for life, school and business.</p><div class="maintext_comment">
+<p class="maintext">With expertise in education, psychotherapy, coaching, and media production<.p>
+    <p>I craft individual workshops addressing soft-skills for life, school and business.</p><div class="maintext_comment">
             </div>
         </div>
         <div class="column_photo">
