--- a/index.html
+++ b/index.html
@@ -31,9 +31,9 @@
                     <p>Let me inspire action, help you calm down, train and shape your reality better.</p>
             <div class="maintext_comment">
 <p class="maintext">What if there is more beauty, bliss and joy, achieved through creativity & courage?
-                 <p>Join a meeting & come practice emotional intelligence,</p></div>>
-                     <p>curiosity, patience, care, respect & kindness.</p><div class="maintext_comment">
-  <p class="maintext"></h1></h1></p>
+                 <p>Join a meeting & come practice emotional intelligence,</p></div>
+            <p>curiosity, patience, care, respect & kindness.</p><div class="maintext_comment">
+  <p class="maintext"></h1></p>
             <div class="maintext_comment">
                  <p>Many people have benefitted from sessions with me:</p>
                      <p>gained clear visions, implemented empathy as a strategic tool for personal and team success,</p>
