--- a/index.html
+++ b/index.html
@@ -23,8 +23,7 @@
     <section id="about" class="bg">
     <div class="flex">
         <div class="column_text">
-<h1>Alisa LarchenCoach</h1> provides guidance & support</p>
-    <p></p>for individuals, families & corporate leaders.</p>              
+<h1>Alisa LarchenCoach</h1> provides guidance & support for individuals, families & corporate leaders.           
 <p class="maintext"></p>
             <div class="maintext_comment">
                 <p>I invite you to explore & integrate your core values in daily life.</p></div>>
@@ -99,7 +98,7 @@
     
         <ul>
             <li><b>Educational</b>: Existential Art-Therapy & Holistic Education Studio, Music Lab & Record Studio for neurodiverse children, teens & adults</li>
-            <li><b>Charitable</b>: Tibetan Martial Arts & Yoga Coaching Marathon, writer's labs, innovative incubators for genius teens</li>
+            <li><b>Charitable</b>: Tibetan Martial Arts & Yoga Coaching Marathon, Writer's Labs, InnovativeIincubators for Genius Teens</li>
         </ul>
     
     </section>
