--- a/index.html
+++ b/index.html
@@ -33,19 +33,18 @@
                     to be able to shape your reality better.</p>
             <div class="maintext_comment">
 <p class="maintext">What if there is more beauty, bliss and joy,
-    <p>achieved through creativity & courage?</p><p class="maintext">
-                <p>Join a meeting & practice emotional intelligence,</p>
-                <p>curiosity, patience, care, respect & kindness.</p>
+    <p>achieved through creativity & courage?</p>
+                <p>Join a meeting & practice emotional intelligence, curiosity,</p>
+                <p>patience, care, respect & kindness.</p>
             </div>
                 
             <div class="maintext_comment">
-                 <p>Many people have benefitted from sessions with me:</p>
+                 <p class="maintext"><p>Many people have benefitted from sessions with me:</p>
                 <p>found solutions to diverse challenges</p>
                      <p>gained clear visions & implemented empathy</p>
-                         <p>as a strategic tool for personal and team success</p>
+                         <p>as a strategic tool for personal and team success.</p><p class="maintext"></p>
 
-<p class="maintext">With expertise in education, psychotherapy,</p>
-    <p>coaching and production</p>
+<p class="maintext">With expertise in education, psychotherapy,coaching and production</p>
     <p>I craft individual workshops addressing soft-skills</p>
         <p>for life, school and business.</p><p class="maintext"></p>
             </div>
