--- a/index.html
+++ b/index.html
@@ -40,13 +40,12 @@
                 
             <div class="maintext_comment">
                  <p class="maintext"><p>Many people have benefitted from sessions with me:</p>
-                <p>found solutions to diverse challenges</p>
-                     <p>gained clear visions & implemented empathy</p>
-                         <p>as a strategic tool for personal and team success.</p><p class="maintext"></p>
+                <p>1) found solutions to diverse challenges & reached wellbeing,</p>
+                     <p>2) gained clear visions & implemented empathy as a strategic tool</p>
+                         <p>for personal and team success</p><p class="maintext"></p>
 
-<p class="maintext">With expertise in education, psychotherapy,coaching and production</p>
-    <p>I craft individual workshops addressing soft-skills</p>
-        <p>for life, school and business.</p><p class="maintext"></p>
+<p class="maintext">With expertise in education, psychotherapy, coaching and production</p>
+    <p>I craft individual workshops addressing soft skills for life, school and business.</p><p class="maintext"></p>
             </div>
         </div>
         <div class="column_photo">
