--- a/index.html
+++ b/index.html
@@ -24,13 +24,13 @@
     <div class="flex">
         <div class="column_text">
 <h1>Alisa LarchenCoach</h1>
-            <p class="maintext">provides guidance & support for individuals, families & corporate leaders.           
+<p class="maintext">provides guidance & support for individuals, families & corporate leaders.           
 <p class="maintext"></p>
             <div class="maintext_comment">
-                <p>I invite you to explore & integrate your core values in daily life.</p></div>
+                <p>I invite you to explore & integrate your core values in daily life.</p>
                 <p>Call me if you need inspired action,
                     calming session, help with self-trust & self-respect
-                    to be able to shape your reality better.</p>
+                    to be able to shape your reality better.</p></div>
             <div class="maintext_comment">
 <p class="maintext">What if there is more beauty, bliss and joy,
     <p>achieved through creativity & courage?</p>
@@ -41,8 +41,7 @@
             <div class="maintext_comment">
                  <p class="maintext"><p>Many people have benefitted from sessions with me:</p>
                 <p>1) found solutions to diverse challenges & reached wellbeing,</p>
-                     <p>2) gained clear visions & implemented empathy as a strategic tool</p>
-                         <p>for personal and team success</p><p class="maintext"></p>
+                     <p>2) gained clear visions & implemented empathy as a strategic tool for personal and team success</p><p class="maintext"></p>
 
 <p class="maintext">With expertise in education, psychotherapy, coaching and production</p>
     <p>I craft individual workshops addressing soft skills for life, school and business.</p><p class="maintext"></p>
